--- a/MobileApp/MountainTrailsApp/MountainTrailsApp.csproj
+++ b/MobileApp/MountainTrailsApp/MountainTrailsApp.csproj
@@ -68,6 +68,9 @@
 	  <MauiXaml Update="AboutPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="HikeLogPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="RegionPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
