--- a/MobileApp/MountainTrailsApp/MountainTrailsApp.csproj
+++ b/MobileApp/MountainTrailsApp/MountainTrailsApp.csproj
@@ -71,7 +71,13 @@
 	  <MauiXaml Update="HikeLogPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="LoginPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="RegionPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="RegisterPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="TrailPage.xaml">
