Puncte de Interes traseu

--- a/MobileApp/MountainTrailsApp/MountainTrailsApp.csproj
+++ b/MobileApp/MountainTrailsApp/MountainTrailsApp.csproj
@@ -74,6 +74,12 @@
 	  <MauiXaml Update="LoginPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="PointPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="PointsPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="RegionPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
